crates/djls-semantic/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__pagination.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "bookmarks.templatetags.pagination::tag::pagination":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: page
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
